--- a/src/productos/Producto.css
+++ b/src/productos/Producto.css
@@ -4,3 +4,48 @@
 	
 	
 }
+
+.detalles{
+	
+	display:flex;
+	flex-direction:column;
+	width:100%;
+	padding:13rem  1rem 0 1rem;
+	box-sizing:border-box;
+}
+
+.detalles h2{
+	font-size:3rem;
+	width:100%;
+	max-width:100px;
+	margin:0 auto;
+	font-family:Arial,Helvetica,san-serif;
+}
+
+
+.detalles price{
+	font-size:3rem;
+	width:100%;
+	
+}
+
+.detalles img{
+	min-height:300px;
+	object-fit:contain;
+	margin-top:-7rem;
+	z-index:0;
+}
+
+.detalles button{
+	max-width:300px;
+	margin:1rem 0 0 0;
+	padding:1rem 1rem;
+	border:none;
+	outline:0;
+	background:#3033d3;
+	font-size:1.6rem;
+	color:white;
+	font-weight:600;
+	border-radius:8px;
+	cursor:pointer;
+}
