10-11-2024 se acomodo en el modulo de categoria imagenes

--- a/src/inicioSeccion/IniciarSeccion.css
+++ b/src/inicioSeccion/IniciarSeccion.css
@@ -17,3 +17,10 @@
 	width:300px;
 	height:300px;
 }
+
+
+.boton4{
+	background:linear-gradient(#051126 70%,#203560);
+	color:white;
+	width:300px;
+}
