11-11-2024 se acomod los productos

--- a/src/servicios/Servicios.css
+++ b/src/servicios/Servicios.css
@@ -8,6 +8,6 @@
 .boton{
 	background:linear-gradient(#051126 70%,#203560);
 	color:white;
-	width:600px;
-	height:300px;
+	margin-left:50px;
+	width:80px;
 }
