--- a/src/productos/Producto.css
+++ b/src/productos/Producto.css
@@ -49,3 +49,14 @@
 	border-radius:8px;
 	cursor:pointer;
 }
+
+.boton-ag{
+	background:linear-gradient(#051126 70%,#203560);
+	color:white;
+}
+
+
+.boton-err{
+	background:linear-gradient(#FE0D1D 70%,#FE0D1D);
+	color:white;
+}
