--- a/src/negocio/negocio.css
+++ b/src/negocio/negocio.css
@@ -34,3 +34,11 @@
   .list-inline-item a {
     font-size: 1.5rem;
   } 
+
+  button.boton5{
+    background:linear-gradient(#051126 70%,#203560);
+    color:white;
+    display: block;
+    margin: 0 auto;
+    width:200px;
+  }
