--- a/src/cpanel/modulo_usuarios/formulario.css
+++ b/src/cpanel/modulo_usuarios/formulario.css
@@ -1,8 +1,11 @@
-#mover{margin-left:300px;}
 
 
-@media (min-width: 400px) and (max-width: 1280px) {
-   #mover{
-    margin-left:30px;
+
+@media (min-width: 1024px)  {
+
+  
+  .mover{
+    margin-left:300px;
+    margin-bottom:-80px
   }
 }
