--- a/src/pagescarrito/Carrito.css
+++ b/src/pagescarrito/Carrito.css
@@ -11,3 +11,12 @@
     border:0px;
     color:white;
 }
+
+.botoncentrado{
+    margin-left:40px;
+}
+@media (min-width: 576px) and (max-width: 992px) {
+  .botoncentrado {
+    margin-left:200px;
+  }
+}
