--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbars{
-	  background:linear-gradient(#051126 70%,#203560) !important;  
-
+	  /*background:linear-gradient(#051126 70%,#203560) !important;*/  
+background-color:#051126;  
 }
 
 .fondo{
@@ -14,8 +14,5 @@ box-icon{background-color:#fff;color:#fff;}
 @media (width <= 560px) {
   .bajartexto{
 	  margin-top:50px;
-  }
-  .tamano{  
-    width:300px;
   }
 }
