--- a/src/pagescarrito/Carrito.css
+++ b/src/pagescarrito/Carrito.css
@@ -1,15 +1,15 @@
 .botonc
 {
-    background-color:#FE0D1D;
+    background-color:#FFCA4B;
     border:0px;
-    color:white;
+    color:black;
 }
 
 .botoncc
 {
-    background:linear-gradient(#051126 70%,#203560);
+    background:#FFCA4B;
     border:0px;
-    color:white;
+    color:black;
 }
 
 .botoncentrado{
